# todoctl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/todoctl/: commands.h  db.h  debug.h  entry.h  errors.h  util.h
src/: commands.c  db.c  debug.c  entry.c  main.c  util.c
